Add Pattern Chain of Responsibility with mysql
